start tags form

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             document.getElementById('gettingStartedLink').href = gettingStartedLink;
 
         };
+        
+        WA.ui.modal.openModal({
+            title: "WorkAdventure website",
+            src: 'https://bingchillin.github.io/iframe_tags_form.html',
+            allow: "fullscreen",
+            allowApi: true,
+            position: "center",
+        });
     </script>
     <style>
         html, body {
