--- a/iframe_tags_form.html
+++ b/iframe_tags_form.html
@@ -70,6 +70,7 @@
                 selectedTags.push(element.textContent);
             });
             console.log(selectedTags);
+            WA.ui.modal.closeModal();
         });
     </script>
 </body>
