add button of event quizz

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             const gettingStartedLink = 'https://workadventu.re/getting-started?name=Map&mapUrl=' + tmjURL;
             document.getElementById('gettingStartedLink').href = gettingStartedLink;
 
+            
+
         };
     </script>
     <style>
@@ -192,6 +194,9 @@
                         <a href="https://discord.gg/G6Xh9ZM9aR" target="_blank">Talk to the community</a>
                     </div>
                 </div>
+            </section>
+            <section>
+                <button id="triggerButton"> Déclencher</button>
             </section>
         </main>
     </div>
