--- a/iframe_tags_form.html
+++ b/iframe_tags_form.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <script src="https://play.workadventu.re/iframe_api.js"></script>
     <style>
         body {
             display: flex;
