--- a/index.html
+++ b/index.html
@@ -211,8 +211,15 @@
             <section>
                 <button id="triggerButton"> Déclencher</button>
             </section>
+            <div id="interactionPopup" style="display: none;">
+                <h2>Bonjour</h2>
+                <p>Voulez-vous discuter avec moi ?</p>
+                <button id="yesButton">Oui</button>
+                <button id="noButton">Non</button>
+            </div>
         </main>
     </div>
+
     <footer>
         <a href="https://workadventu.re/" target="_blank" title="workadventu.re">&copy; WorkAdventure</a>
     </footer>
