refont ifram tags form

--- a/iframe_tags_form.html
+++ b/iframe_tags_form.html
@@ -11,7 +11,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #ff6ef5;
+            background-color: #FFE6EF;
+        }
+        #titre{
+            font-weight:900;
         }
         #tags{
             display: flex;
@@ -22,16 +25,20 @@
         #saveButton{
             padding: 8px 16px;
             margin-top: 30px;
-            background-color: #ca6d2a;
+            background-color: #FFCE00;
             color: #000000;
             border-radius: 5px;
+            border: none;
+            box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
         }
         .tag {
             padding: 8px 16px;
             margin: 4px;
-            background-color: #ca2a2a;
+            background-color: #D592E8;
             color: #000000;
+            border: 1px solid #000000;
             border-radius: 5px;
+            border-color: #000000;
             cursor: pointer;
             user-select: none;
         }
